--- a/app/src/main/res/layout/activity_latest_messages.xml
+++ b/app/src/main/res/layout/activity_latest_messages.xml
@@ -5,6 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LatestMessagesActivity">
+        tools:context=".messages.LatestMessagesActivity">
+
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/rv_latest_messages"/>
+
 
 </android.support.constraint.ConstraintLayout>
