--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Back to registration"
+            android:text="Don't have an account?"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="bold"
