--- a/app/src/main/res/layout/activity_new_messages.xml
+++ b/app/src/main/res/layout/activity_new_messages.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NewMessagesActivity">
+        tools:context=".messages.NewMessagesActivity">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
